objects/Internal_Broker__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>STD</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Stop Loss</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep_Num__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rep #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Comp_Master__c</fullName>
        <label>Sales Compensation</label>
        <referenceTo>Sales_Compensation__c</referenceTo>
        <relationshipLabel>Agents</relationshipLabel>
        <relationshipName>Internal_Brokers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Full_Name__c</fullName>
        <formula>Sales_Rep__r.FirstName &amp;&quot; &quot;&amp; Sales_Rep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_Percentage__c</fullName>
        <label>Split %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SR - Account Coordinator (SAR)</fullName>
                </value>
                <value>
                    <fullName>AM – Service Rep (Account Manager)</fullName>
                </value>
                <value>
                    <fullName>AE – Sales Rep (SAE)</fullName>
                </value>
                <value>
                    <fullName>SSE - Specialty Sales Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agent</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Internal Rep Listing</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Effective_Date_Must_Be_Greater_than_Opp</fullName>
        <active>true</active>
        <description>Effective Date on This List Must be Greater Than Opportunity Effective Date</description>
        <errorConditionFormula>Effective_Date__c &lt;= 
   (Sales_Comp_Master__r.Opportunity__r.CloseDate) -1</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>Agent/User Effective Date Must Be Greater Than Opportunity Effective Date</errorMessage>
    </validationRules>
</CustomObject>